# pairs-trading

./: LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: 01_screening_diagnostics.ipynb  02_backtest_walkforward.ipynb
scripts/: run_backtest.py
src/statarb/: __init__.py  backtest.py  cointegration.py  data.py  kalman.py  metrics.py  ou_process.py  signals.py  walk_forward.py
tests/: test_kalman_convergence.py  test_no_lookahead.py
